# strided-iterator

./: CMakeLists.txt  LICENSE.txt  README.md
include/: const_strided_iterator.hpp  strided_iterator.hpp
test/: CMakeLists.txt  const_strided_iterator_test.cpp  strided_iterator_test.cpp
